@@ -31,22 +31,15 @@ sub new {
 
     $log = Logging::Simple->new(level => 0, name => 'Tester');
 
-    my $tester_log = $log->child('Tester');
-
-    $tester_log->_5("\n\n***\n" .
-                    __PACKAGE__ .
-                    "\n***\n\n"
-    );
-
     my $log_file = \$self->{log};
 
     if ($self->{logfile}){
         $log_file = Test::BrewBuild->workdir ."/bbtester_parent.log";
-        $tester_log->_7("log file is: $log_file");
+        $log->_7("log file is: $log_file");
     }
 
     if ($self->{log_to_stdout}){
-        $tester_log->_7("logging to STDOUT");
+        $log->_7("logging to STDOUT");
         $log->file($log_file);
     }
 
